--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=12345678
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 app.api.swagger.enable = false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
