--- a/payment/src/main/resources/config.yml
+++ b/payment/src/main/resources/config.yml
@@ -1,20 +1,9 @@
 spring:
   kafka:
-    listener:
-      concurrency: 2
-    consumer:
-      bootstrap-servers:
-        - ${KAFKA_HOST:localhost}:9092
-      group-id: payment-group
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      auto-offset-reset: earliest
     producer:
-      bootstrap-servers:
-        - ${KAFKA_HOST:localhost}:9092
+      bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-    topics:
-      notification-request: notifications.payment.request
 
-
+topic:
+  app-payment: notifications.payment.request
